# Learn

./: .gitignore  Quantum Mechanics.md  README.md  omnifocus-ai-snapshot-2026-06-29T15-29-13-437Z.json  spacemacs.txt  test.md  vim.txt
Brain/.obsidian/: cache  config  workspace
Brain/廷墨之白/.obsidian/: workspace
Brain/缉毒犬/: 中国缉毒犬的发展.md  发展历史和选育.md  百科词条.md  缉毒犬的分类和区别，以及特点.md  训练.md  问答.md
Latex/Flow Chart/: 1.tex  Learn.tex
Latex/Learn/: .aux  Learn.aux  Learn.out  Learn.tex  Learn.toc
Latex/Notes/: Toc.tex
Latex/Notes/First/: First.aux  First.out  First.tex
Latex/Notes/Math/: Math.aux  Math.out  Math.tex  Math.toc
Latex/Notes/Second/: Second.aux  Second.tex  Second.toc
Latex/Notes/Third/: third.aux  third.tex
Latex/Notes/Vocabulary/: Vocabulary.tex
Latex/PPT/: 史学睿 第一周.ppt  史学睿 第七、八周.ppt  史学睿 第三周.ppt  史学睿 第九周 .ppt  史学睿 第二周.ppt  史学睿 第五周.ppt  史学睿 第六周.ppt  史学睿 第十周 .ppt  史学睿 第四周.ppt  第十周.txt
Latex/Paper/: 笔记.org
Latex/毕设文件/: 2020届毕业论文-史学睿.docx  参考文献.txt  毕业论文中期报告-史学睿.docx  毕业论文任务书-史学睿.docx  毕业论文前期报告-史学睿.docx  秦皇岛市辉光电子关于串口通讯说明.doc
Latex/毕设文件/物理系2020年毕设模板/: 2020届毕业论文格式模版.docx  毕业论文中期报告.docx  毕业论文任务书.docx  毕业论文前期报告.docx
Notes/DBS/: First.org
Notes/Math/: First.aux  First.out  First.tex  Lec_01.tex  master.fdb_latexmk  master.fls  master.tex  master.xdv  test.tex
Notes/Math/scripts/: config.py  info.yaml  lectures.py
Notes/Review/: 半导体物理.md
Physics/: Introduction.tex
Physics/Physics/: .gitattributes  Books.xlsx
Program/Cpp/: CMakeLists.txt  Test.cpp
Program/Python/: Test.py
